translation-tool/inputs/source_meta/objects/HNSCASEINFOVIEW__x.object
<CustomObject>
    <description>HNSCASEINFOVIEW</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNSCASEINFOVIEW</externalName>
    <fields>
        <fullName>ACCOUNT_ID__c</fullName>
        <description>ACCOUNT_ID</description>
        <externalDeveloperName>ACCOUNT_ID</externalDeveloperName>
        <label>ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDED_BY__c</fullName>
        <description>ADDED_BY</description>
        <externalDeveloperName>ADDED_BY</externalDeveloperName>
        <label>ADDED_BY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID__c</fullName>
        <description>BO_ID</description>
        <externalDeveloperName>BO_ID</externalDeveloperName>
        <label>BO_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>BUSINESS_UNIT</description>
        <externalDeveloperName>BUSINESS_UNIT</externalDeveloperName>
        <label>BUSINESS_UNIT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>Case Id#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TYPE__c</fullName>
        <description>CASE_TYPE</description>
        <externalDeveloperName>CASE_TYPE</externalDeveloperName>
        <label>Case Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATETIME_ADDED__c</fullName>
        <description>DATETIME_ADDED</description>
        <externalDeveloperName>DATETIME_ADDED</externalDeveloperName>
        <label>DATETIME_ADDED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <description>DESCRIPTION</description>
        <externalDeveloperName>DESCRIPTION</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DETAIL__c</fullName>
        <description>DETAIL</description>
        <externalDeveloperName>DETAIL</externalDeveloperName>
        <label>Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPOSITION_DETAILS__c</fullName>
        <description>DISPOSITION_DETAILS</description>
        <externalDeveloperName>DISPOSITION_DETAILS</externalDeveloperName>
        <label>Disposition Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DISPOSITION_STATUS__c</fullName>
        <description>DISPOSITION_STATUS</description>
        <externalDeveloperName>DISPOSITION_STATUS</externalDeveloperName>
        <label>Disposition Status</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPOSITION_SUMMARY__c</fullName>
        <description>DISPOSITION_SUMMARY</description>
        <externalDeveloperName>DISPOSITION_SUMMARY</externalDeveloperName>
        <label>Disposition Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROBLEM_AREA__c</fullName>
        <description>PROBLEM_AREA</description>
        <externalDeveloperName>PROBLEM_AREA</externalDeveloperName>
        <label>Problem Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROBLEM_TYPE__c</fullName>
        <description>PROBLEM_TYPE</description>
        <externalDeveloperName>PROBLEM_TYPE</externalDeveloperName>
        <label>Problem Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <description>PRODUCT_LINE</description>
        <externalDeveloperName>PRODUCT_LINE</externalDeveloperName>
        <label>Product Line</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_SUMMARY__c</fullName>
        <description>RC_SUMMARY</description>
        <externalDeveloperName>RC_SUMMARY</externalDeveloperName>
        <label>RC_SUMMARY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOURCE__c</fullName>
        <description>SOURCE</description>
        <externalDeveloperName>SOURCE</externalDeveloperName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMMARY__c</fullName>
        <description>SUMMARY</description>
        <externalDeveloperName>SUMMARY</externalDeveloperName>
        <label>Summary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>HNSCASEINFOVIEW</label>
    <pluralLabel>HNSCASEINFOVIEW</pluralLabel>
</CustomObject>